# SubmitOne

./: ARBEITSABLAEUFE.md  BELAG-PLATTEN.md  DESKTOP.md  PERFEKTIONIERUNG.md  PLANS.md  ROADMAP.md  STRUKTUR.md  VEROEFFENTLICHUNG.md  VISION.md  app.js  appswitch.js  bridge.js  config.js  index.html  manifest.webmanifest  styles.css  supabase-schema.sql  sw.js
docs/: laibung-endkonzept.md  qes-integration.md  swisssign-partneranfrage.md
pdf/: index.html  manifest.webmanifest  pdf.css  pdf.js  sw.js  tauri-bridge.js
pdf/test/: selftest-node.js
site/: index.html  site.js  style.css
site/videos/: README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
supabase/functions/firmensuche/: index.ts
supabase/functions/stripe-webhook/: README.md  index.ts
test/: selftest-node.js
ui/: tokens.css
write/: ARCHITEKTUR.md  index.html  write.css  write.js
write/test/: selftest-node.js
