[package]
name = "submit-pdf"
version = "0.1.0"
description = "Submit PDF — PDF-Editor, Dateien bleiben lokal"
authors = ["Yanick Gerber"]
edition = "2021"

[lib]
name = "submit_pdf_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
